Add styles && JS

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "npm-run-all build -p watch:*",
     "watch:browsersync": "browser-sync start --server --files css/*.css *.html",
-    "watch:sassprefixer": "onchange -d 100 sass/style.scss -- node-sass --output-style expanded --source-map true -o css sass/style.scss && autoprefixer-cli -o css/style.css css/style.css"
+    "watch:sassprefixer": "onchange -d 100 sass/style.scss -- node-sass --output-style expanded --source-map true -o css sass/style.scss && autoprefixer-cli css/style.css"
   },
   "repository": {
     "type": "git",
@@ -41,5 +41,7 @@
     "onchange": "^5.1.2",
     "rimraf": "^2.6.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  }
 }
