--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "npm-run-all build -p watch:*",
-    "watch:browsersync": "browser-sync start --server --files css/*.css *.html",
+    "watch:browsersync": "browser-sync start --server --files css/*.css *.html js/*.js",
     "watch:sassprefixer": "onchange -d 100 sass/style.scss -- node-sass --output-style expanded --source-map true -o css sass/style.scss && autoprefixer-cli css/style.css"
   },
   "repository": {
